# uniswapV2-implementation

./: .env.example  .gitignore  .solhint.json  Cargo.toml  README.md  foundry.toml  hardhat.config.ts  package.json  remappings.txt  test.sh  tsconfig.json
contracts/: Token.sol
contracts/interfaces/: IUniswapV2RouterV2.sol
sol_test/: BaseTest.t.sol
sol_test/uniswapV2/: UniswapV2Test.t.sol
sol_test/uniswapV2/add-liquidity/: addLiquidity.t.sol
src/: main.rs
test/shared/: types.ts
test/unit/: index.ts
test/unit/token/: Token.fixture.ts  Token.ts
test/unit/token/effects/: mint.ts
test/unit/token/view/: balanceOf.ts  name.ts  symbol.ts
test/unit/uniswapV2/: UniswapV2.behavior.ts  UniswapV2.fixture.ts  UniswapV2.ts
test/unit/uniswapV2/effects/: addLiquidity.ts  swap.ts
utils/: format.ts
